# openitg

./: .gitignore  FAQ.txt  Licenses.txt  Makefile.am  OpenITG.kdevelop  README  README-Windows-build.md  README.md  ReleaseNotes.txt  ToDo.txt  WhoToSue.txt  alpha5-checklist.txt  autogen.sh  build-arcade.sh  build-home.sh  changelog.txt  chroot-arcade.sh  chroot-home.sh  common.sh  configure.ac  copyright.txt  dependencies.txt  deploy.sh  docker-arcade.sh  gen-arcade-patch.sh  gen-patch-zip.sh  generate-home-release.sh  generate-patch.sh  generate-version  getdependencies.sh  openitg-decrypt  openitg-encrypt  setup-dev-env.sh  start-openitg.bat  start-openitg.sh  startchroot.sh  unchroot.sh
assets/utilities/itg2-util/: ChangeLog  NEWS  README  autogen.sh  configure.ac
assets/utilities/itg2-util/src/: Makefile.am  aes.h  aesopt.h  aestab.c  dbgutil.c  dbgutil.h  ds2480.h  getkey.c  getkey.h  itg2-decrypt.c  itg2-encrypt.c  itg2-patch-constants.h  itg2-patch-decrypt.c  itg2-patch-encrypt.c  itg2-swiss-army-knife.c  itg2util.c  itg2util.h  keydump.c  keydump.h  owerr.c  owfile.h  ownet.h
assets/utilities/itg2-util/src/libtomcrypt/src/ciphers/aes/: aes.c  aes_tab.c
assets/utilities/itg2-util/src/libtomcrypt/src/hashes/: md5.c  sha1.c
assets/utilities/itg2-util/src/libtomcrypt/src/hashes/helper/: hash_memory.c
assets/utilities/itg2-util/src/libtomcrypt/src/headers/: tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_macros.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_pkcs.h  tomcrypt_prng.h
assets/utilities/itg2-util/src/libtomcrypt/src/math/: ltm_desc.c  multi.c  rand_prime.c
assets/utilities/itg2-util/src/libtomcrypt/src/math/fp/: ltc_ecc_fp_mulmod.c
assets/utilities/itg2-util/src/libtomcrypt/src/misc/: burn_stack.c  error_to_string.c  zeromem.c
assets/utilities/itg2-util/src/libtomcrypt/src/misc/base64/: base64_decode.c  base64_encode.c
assets/utilities/itg2-util/src/libtomcrypt/src/misc/crypt/: crypt.c  crypt_argchk.c  crypt_cipher_descriptor.c  crypt_cipher_is_valid.c  crypt_find_cipher.c  crypt_find_cipher_any.c  crypt_find_cipher_id.c  crypt_find_hash.c  crypt_find_hash_any.c  crypt_find_hash_id.c  crypt_find_hash_oid.c  crypt_find_prng.c  crypt_fsa.c  crypt_hash_descriptor.c  crypt_hash_is_valid.c  crypt_prng_descriptor.c  crypt_prng_is_valid.c  crypt_register_cipher.c  crypt_register_hash.c  crypt_register_prng.c  crypt_unregister_cipher.c  crypt_unregister_hash.c  crypt_unregister_prng.c
assets/utilities/itg2-util/src/libtomcrypt/src/misc/pkcs5/: pkcs_5_1.c  pkcs_5_2.c
assets/utilities/itg2-util/src/libtomcrypt/src/modes/cbc/: cbc_decrypt.c  cbc_done.c  cbc_encrypt.c  cbc_getiv.c  cbc_setiv.c  cbc_start.c
assets/utilities/itg2-util/src/libtomcrypt/src/modes/cfb/: cfb_decrypt.c  cfb_done.c  cfb_encrypt.c  cfb_getiv.c  cfb_setiv.c  cfb_start.c
assets/utilities/itg2-util/src/libtomcrypt/src/modes/ctr/: ctr_decrypt.c  ctr_done.c  ctr_encrypt.c  ctr_getiv.c  ctr_setiv.c  ctr_start.c  ctr_test.c
assets/utilities/itg2-util/src/libtomcrypt/src/modes/ecb/: ecb_decrypt.c  ecb_done.c  ecb_encrypt.c  ecb_start.c
assets/utilities/itg2-util/src/libtomcrypt/src/modes/ofb/: ofb_decrypt.c  ofb_done.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/bit/: der_decode_bit_string.c  der_encode_bit_string.c  der_length_bit_string.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/boolean/: der_decode_boolean.c  der_encode_boolean.c  der_length_boolean.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/choice/: der_decode_choice.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/ia5/: der_decode_ia5_string.c  der_encode_ia5_string.c  der_length_ia5_string.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/integer/: der_decode_integer.c  der_encode_integer.c  der_length_integer.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/object_identifier/: der_decode_object_identifier.c  der_encode_object_identifier.c  der_length_object_identifier.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/octet/: der_decode_octet_string.c  der_encode_octet_string.c  der_length_octet_string.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/printable_string/: der_decode_printable_string.c  der_encode_printable_string.c  der_length_printable_string.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/asn1/der/sequence/: der_decode_sequence_ex.c  der_length_sequence.c  (+4 more)
assets/utilities/itg2-util/src/libtomcrypt/src/pk/dsa/: dsa_decrypt_key.c  dsa_encrypt_key.c  dsa_export.c  dsa_free.c  dsa_import.c  dsa_make_key.c  dsa_shared_secret.c  dsa_sign_hash.c  dsa_verify_hash.c  dsa_verify_key.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/pkcs1/: pkcs_1_i2osp.c  pkcs_1_mgf1.c  pkcs_1_oaep_decode.c  pkcs_1_oaep_encode.c  pkcs_1_os2ip.c  pkcs_1_pss_decode.c  pkcs_1_pss_encode.c  pkcs_1_v1_5_decode.c  pkcs_1_v1_5_encode.c
assets/utilities/itg2-util/src/libtomcrypt/src/pk/rsa/: rsa_decrypt_key.c  rsa_decrypt_key.c~  rsa_encrypt_key.c  rsa_encrypt_key.c~  rsa_export.c  rsa_exptmod.c  rsa_free.c  rsa_import.c  rsa_make_key.c  rsa_sign_hash.c  rsa_verify_hash.c
assets/utilities/itg2-util/src/libtomcrypt/src/prngs/: fortuna.c  rng_get_bytes.c  rng_make_prng.c  sober128tab.c  sprng.c  yarrow.c
assets/utilities/itg2-util/src/libtommath/: bn_error.c  bn_fast_mp_invmod.c  bn_fast_mp_montgomery_reduce.c  bn_fast_s_mp_mul_digs.c  bn_fast_s_mp_mul_high_digs.c  bn_fast_s_mp_sqr.c  bn_mp_2expt.c  bn_mp_abs.c  bn_mp_add.c  bn_mp_add_d.c  bn_mp_addmod.c  bn_mp_and.c  bn_mp_clamp.c  bn_mp_clear.c  bn_mp_clear_multi.c  bn_mp_cmp.c  bn_mp_cmp_d.c  bn_mp_cmp_mag.c  bn_mp_cnt_lsb.c  bn_mp_copy.c  bn_mp_count_bits.c  bn_mp_div.c  bn_mp_div_2.c  bn_mp_div_2d.c  bn_mp_div_3.c  bn_mp_div_d.c  bn_mp_dr_is_modulus.c  bn_mp_dr_reduce.c  bn_mp_dr_setup.c  bn_mp_exch.c  bn_mp_expt_d.c  bn_mp_exptmod.c  bn_mp_exptmod_fast.c  bn_mp_exteuclid.c  bn_mp_fread.c  bn_mp_fwrite.c  bn_mp_gcd.c  bn_mp_get_int.c  bn_mp_grow.c  bn_mp_init.c  (+82 more)
(+2768 files in other folders)
